--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>About</title>
     <link rel="stylesheet" href="./css/pages/about.css" />
   </head>
   <body>
@@ -23,8 +23,8 @@
         <ul>
           <li><a href="./index.html">Home</a></li>
           <li><a href="./about.html">About</a></li>
-          <li><a href="">Services</a></li>
-          <li><a href="">Projects</a></li>
+          <li><a href="./services.html">Services</a></li>
+          <li><a href="./projects.html">Projects</a></li>
           <li><a href="">Contact</a></li>
           <li>
             <button class="cta"><a href="">TAKE ACTION</a></button>
@@ -73,13 +73,29 @@
             Click edit button to change this text. Lorem ipsum dolor sit amet,
             adipiscing elit.
           </p>
-          <p>
-            Click edit button to change this text. Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper
-            mattis, pulvinar dapibus leo.
-          </p>
+          <div class="liste">
+            <div class="listeLigne">
+              <span class="separator2"></span>
+              <p>Locavit liberioris possedit</p>
+            </div>
+            <div class="listeLigne">
+              <span class="separator2"></span>
+              <p>Diremit mundi mare undae</p>
+            </div>
+            <div class="listeLigne">
+              <span class="separator2"></span>
+              <p>Spectent tonitrua mutastis</p>
+            </div>
+          </div>
         </div>
       </section>
     </main>
+    <footer>
+      <p>
+        123 Fifth Avenue, NY 10160, New York, USA | Phone: 800-123-456 | Email:
+        contact@example.com
+      </p>
+      <p>Copyright © 2025 Outdoor Adventure</p>
+    </footer>
   </body>
 </html>
