3eme commit, presque la fin

--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
           <li><a href="./about.html">About</a></li>
           <li><a href="./services.html">Services</a></li>
           <li><a href="./projects.html">Projects</a></li>
-          <li><a href="">Contact</a></li>
+          <li><a href="./contact.html">Contact</a></li>
           <li>
             <button class="cta"><a href="">TAKE ACTION</a></button>
           </li>
@@ -36,6 +36,8 @@
       </section>
     </header>
     <main>
+      <!-- Première section texte et image -->
+
       <section>
         <div class="textDisplayLeft">
           <h2>Our MissioN</h2>
@@ -50,8 +52,15 @@
             mattis, pulvinar dapibus leo.
           </p>
         </div>
-        <img src="./css/pages/css/image/outdoor-image-02.jpg" alt="" />
+
+        <img
+          src="./css/pages/css/image/outdoor-image-02.jpg"
+          alt=" A man standing next to a small lake and watching a waterfall"
+        />
       </section>
+
+      <!-- Deuxième section texte et liste -->
+
       <section>
         <div class="textDisplayLeft">
           <h4>Extraordinary Experiences</h4>
@@ -66,6 +75,7 @@
             mattis, pulvinar dapibus leo.
           </p>
         </div>
+
         <div class="textDisplayLeft">
           <h4>Our Core Values</h4>
           <div class="separator"></div>
