--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <li><a href="./about.html">About</a></li>
           <li><a href="./services.html">Services</a></li>
           <li><a href="./projects.html">Projects</a></li>
-          <li><a href="">Contact</a></li>
+          <li><a href="./contact.html">Contact</a></li>
           <li>
             <button class="cta"><a href="">TAKE ACTION</a></button>
           </li>
@@ -41,9 +41,11 @@
       </section>
     </header>
     <main>
+      <!-- Première section contenant la citation -->
+
       <section>
         <div id="citationContainer">
-          <img src="./css/pages/css/image/quote-1.png" alt="" />
+          <img src="./css/pages/css/image/quote-1.png" alt="Logo of a quote" />
           <div>
             <p>
               "Fuerat aestu carentem habentia spectent tonitrua mutastis locavit
@@ -54,6 +56,8 @@
           <div id="cell"></div>
         </div>
       </section>
+
+      <!--Section contenant les prochains évènements  -->
 
       <section id="upcomingEvents">
         <h2>Upcoming Event</h2>
@@ -79,7 +83,7 @@
           <div class="imageDisplay">
             <img
               src="./css/pages/css/image/walking-v1.jpg"
-              alt="A man hiking in the mountains"
+              alt="A woman walking on the edge of a hill"
             />
             <h5>Walking Holidays</h5>
             <p>
@@ -92,6 +96,8 @@
           </div>
         </div>
       </section>
+
+      <!-- CTA pour rediriger vers une autre page -->
 
       <section id="exploreTheWorld">
         <div id="cell2"></div>
@@ -109,6 +115,8 @@
         </div>
       </section>
 
+      <!-- Prochaines destinations -->
+
       <section id="tourSectionFlex">
         <div id="toursSection">
           <div id="textDisplayHome">
@@ -125,16 +133,29 @@
             </button>
           </div>
           <div class="imageHome">
-            <img src="./css/pages/css/image/outdoor-image-01.jpg" alt="" />
-            <img src="./css/pages/css/image/image-1.jpg" alt="" />
+            <img
+              src="./css/pages/css/image/outdoor-image-01.jpg"
+              alt="Someone skying"
+            />
+            <img
+              src="./css/pages/css/image/image-1.jpg"
+              alt="A man watching far away next to his bike"
+            />
           </div>
           <div class="imageHome">
-            <img src="./css/pages/css/image/snow-1.jpg" alt="" />
-            <img src="./css/pages/css/image/outdoor-image-04.jpg" alt="" />
+            <img
+              src="./css/pages/css/image/snow-1.jpg"
+              alt="Someone walking in ski"
+            />
+            <img
+              src="./css/pages/css/image/outdoor-image-04.jpg"
+              alt="A group of people hiking in the mountains in the snow"
+            />
           </div>
         </div>
       </section>
     </main>
+
     <footer>
       <p>
         123 Fifth Avenue, NY 10160, New York, USA | Phone: 800-123-456 | Email:
