--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,7 @@
           <li><a href="./about.html">About</a></li>
           <li><a href="./services.html">Services</a></li>
           <li><a href="./projects.html">Projects</a></li>
-          <li><a href="">Contact</a></li>
+          <li><a href="./contact.html">Contact</a></li>
           <li>
             <button class="cta"><a href="">TAKE ACTION</a></button>
           </li>
@@ -35,5 +35,97 @@
         <h1>Our Projects</h1>
       </section>
     </header>
+    <main>
+      <section>
+        <div id="titre">
+          <h6>Adventure</h6>
+          <div class="separator"></div>
+        </div>
+        <div>
+          <h2>Water Sports</h2>
+          <p>
+            Interdum exercitation penatibus, praesentium facilisi accusamus
+            fermentum, sagittis.
+          </p>
+        </div>
+        <article>
+          <img
+            src="./css/pages/css/image/water-sports-03.jpg"
+            alt="A boat cruising in a river next to a cliff"
+          />
+          <img
+            src="./css/pages/css/image/water-sports-01.jpg"
+            alt="A small boat in the middle of a lake surrounded by small mountains"
+          />
+          <img
+            src="./css/pages/css/image/water-sports-04.jpg"
+            alt="A kanoe with a lady in it relaxing in the middle of a lake"
+          />
+        </article>
+      </section>
+
+      <section>
+        <div id="titre">
+          <h6>Snow Adventure</h6>
+          <div class="separator"></div>
+        </div>
+        <div>
+          <h2>Winter Sports</h2>
+          <p>
+            Interdum exercitation penatibus, praesentium facilisi accusamus
+            fermentum, sagittis.
+          </p>
+        </div>
+        <article>
+          <img
+            src="./css/pages/css/image/winter-sports-01-nzqdakvd9y6ql3cjzkfjdcrr6o5msw2mv8o8ug2dqw.jpg"
+            alt="A man in ski jumping in the snow"
+          />
+          <img
+            src="./css/pages/css/image/winter-sports-02-nzqdabgzdltvczq7igd9of558tfynx1bhy5e1ogbh4.jpg"
+            alt="Four people in a cable car"
+          />
+          <img
+            src="./css/pages/css/image/winter-sports-03-nzqd8khsnpfnr49oq759jd19g02dc73axafuw51p20.jpg"
+            alt=" An athlete jumping and doing tricks on a ramp in the snow"
+          />
+        </article>
+      </section>
+
+      <section>
+        <div id="titre">
+          <h6>Forest Tours</h6>
+          <div class="separator"></div>
+        </div>
+        <div>
+          <h2>Camping</h2>
+          <p>
+            Interdum exercitation penatibus, praesentium facilisi accusamus
+            fermentum, sagittis.
+          </p>
+        </div>
+        <article>
+          <img
+            src="./css/pages/css/image/camp-1-nzqd81p0v0pxax0zrz0q5hs1kan1290o6pe5altkig.jpg"
+            alt="A woman and a black dog sitting in a tent next to a lake"
+          />
+          <img
+            src="./css/pages/css/image/camp-2-nzqd7cbdqhr6lg1uw61ss66liw44af7x37s1c4v76g.jpg"
+            alt="A man sitting next to his tent on a hill"
+          />
+          <img
+            src="./css/pages/css/image/camp-3-nzqd6qp3daxl6ex9eepdotmzv12oddu3c8rvarr95k.jpg"
+            alt="An empty tent in the middle of the clouds on top of a mountain"
+          />
+        </article>
+      </section>
+    </main>
+    <footer>
+      <p>
+        123 Fifth Avenue, NY 10160, New York, USA | Phone: 800-123-456 | Email:
+        contact@example.com
+      </p>
+      <p>Copyright © 2025 Outdoor Adventure</p>
+    </footer>
   </body>
 </html>
