--- a/services.html
+++ b/services.html
@@ -25,7 +25,7 @@
           <li><a href="./about.html">About</a></li>
           <li><a href="./services.html">Services</a></li>
           <li><a href="./projects.html">Projects</a></li>
-          <li><a href="">Contact</a></li>
+          <li><a href="./contact.html">Contact</a></li>
           <li>
             <button class="cta"><a href="">TAKE ACTION</a></button>
           </li>
@@ -36,6 +36,8 @@
       </section>
     </header>
     <main>
+      <!-- Première section avec une grille d'image -->
+
       <section id="services">
         <h2>It's Time to Start Your Adventures</h2>
         <div class="separator"></div>
@@ -44,12 +46,13 @@
           consectetur adipiscing elit. Ut elit tellus, luctus ullamcorpe
           pulvinar.
         </p>
+
         <article>
           <div>
             <div class="imageDisplay">
               <img
                 src="./css/pages/css/image/outdoor-image-03.jpg"
-                alt="A man hiking in the mountains"
+                alt="A man hiking in the mountains with a backbak"
               />
               <h5>Backpacking Trips</h5>
               <p>
@@ -61,7 +64,7 @@
             <div class="imageDisplay">
               <img
                 src="./css/pages/css/image/services-2.jpg"
-                alt="A man hiking in the mountains"
+                alt="A landscape of moutains in the back and a forest in front"
               />
               <h5>Family Hiking Trips</h5>
               <p>
@@ -74,7 +77,7 @@
             <div class="imageDisplay">
               <img
                 src="./css/pages/css/image/services-3.jpg"
-                alt="A man hiking in the mountains"
+                alt="A landscape of a lake and small boats with mountains surrounding the lake"
               />
               <h5>Water Sports</h5>
               <p>
@@ -86,7 +89,7 @@
             <div class="imageDisplay">
               <img
                 src="./css/pages/css/image/outdoor-image-01.jpg"
-                alt="A man hiking in the mountains"
+                alt="Someone skying"
               />
               <h5>Winter Sports</h5>
               <p>
@@ -97,6 +100,9 @@
           </div>
         </article>
       </section>
+
+      <!-- Deuxième section comprenant des textes avec listes -->
+
       <section id="listes">
         <div class="textDisplayLeft">
           <h4>Why Outdoor Adventure</h4>
