4eme commit, ajout d'un menu burger sur le home

--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
             <button class="cta"><a href="">TAKE ACTION</a></button>
           </li>
         </ul>
+        <ul class="burgerNav">
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./about.html">About</a></li>
+          <li><a href="./services.html">Services</a></li>
+          <li><a href="./projects.html">Projects</a></li>
+          <li><a href="./contact.html">Contact</a></li>
+          <li>
+            <button class="cta"><a href="">TAKE ACTION</a></button>
+          </li>
+        </ul>
       </nav>
       <section>
         <h3>Explore the Colourful World</h3>
@@ -163,5 +173,6 @@
       </p>
       <p>Copyright © 2025 Outdoor Adventure</p>
     </footer>
+    <script src="./js/burger.js"></script>
   </body>
 </html>
