--- a/about.html
+++ b/about.html
@@ -12,15 +12,25 @@
         <button name="logo" type="button">
           <a href="./index.html">
             <img
-              src="./css/templatePart/image/white-logo-150x42.png"
+              src="./css/image/nav/logoWhite.png"
               alt="Outdoor Adventure Logo"
             />
           </a>
         </button>
         <button class="burger-menu" aria-label="Toggle navigation">
-          <img src="./css/pages/css/image/burger.svg" alt="" />
+          <img src="./css/image/nav/burger.svg" alt="" />
         </button>
         <ul>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./about.html">About</a></li>
+          <li><a href="./services.html">Services</a></li>
+          <li><a href="./projects.html">Projects</a></li>
+          <li><a href="./contact.html">Contact</a></li>
+          <li>
+            <button class="cta"><a href="">TAKE ACTION</a></button>
+          </li>
+        </ul>
+        <ul class="burgerNav">
           <li><a href="./index.html">Home</a></li>
           <li><a href="./about.html">About</a></li>
           <li><a href="./services.html">Services</a></li>
@@ -54,7 +64,7 @@
         </div>
 
         <img
-          src="./css/pages/css/image/outdoor-image-02.jpg"
+          src="./css/image/about/hiking2.jpg"
           alt=" A man standing next to a small lake and watching a waterfall"
         />
       </section>
@@ -107,5 +117,6 @@
       </p>
       <p>Copyright © 2025 Outdoor Adventure</p>
     </footer>
+    <script src="./js/burger.js"></script>
   </body>
 </html>
