--- a/contact.html
+++ b/contact.html
@@ -12,15 +12,25 @@
         <button name="logo" type="button">
           <a href="./index.html">
             <img
-              src="./css/templatePart/image/white-logo-150x42.png"
+              src="./css/image/nav/logoWhite.png"
               alt="Outdoor Adventure Logo"
             />
           </a>
         </button>
         <button class="burger-menu" aria-label="Toggle navigation">
-          <img src="./css/pages/css/image/burger.svg" alt="" />
+          <img src="./css/image/nav/burger.svg" alt="" />
         </button>
         <ul>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./about.html">About</a></li>
+          <li><a href="./services.html">Services</a></li>
+          <li><a href="./projects.html">Projects</a></li>
+          <li><a href="./contact.html">Contact</a></li>
+          <li>
+            <button class="cta"><a href="">TAKE ACTION</a></button>
+          </li>
+        </ul>
+        <ul class="burgerNav">
           <li><a href="./index.html">Home</a></li>
           <li><a href="./about.html">About</a></li>
           <li><a href="./services.html">Services</a></li>
@@ -85,15 +95,21 @@
           <div id="logoContact">
             <button>
               <img
-                src="./css/pages/css/image/icons8-facebook-nouveau-50.png"
+                src="./css/image/contact/icon-facebook.png"
                 alt="icone facebook"
               />
             </button>
             <button>
-              <img src="./css/pages/css/image/icons8-twitter-50.png" alt="" />
+              <img
+                src="./css/image/contact/icon-twitter.png"
+                alt="Icone Twitter"
+              />
             </button>
             <button>
-              <img src="./css/pages/css/image/icons8-youtube-50.png" alt="" />
+              <img
+                src="./css/image/contact/icon-youtube.png"
+                alt="Icone Youtube"
+              />
             </button>
           </div>
         </div>
@@ -106,5 +122,6 @@
       </p>
       <p>Copyright © 2025 Outdoor Adventure</p>
     </footer>
+    <script src="./js/burger.js"></script>
   </body>
 </html>
