--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
         <button name="logo" type="button">
           <a href="./index.html">
             <img
-              src="./css/templatePart/image/white-logo-150x42.png"
+              src="./css/image/nav/logoWhite.png"
               alt="Outdoor Adventure Logo"
             />
           </a>
         </button>
         <button class="burger-menu" aria-label="Toggle navigation">
-          <img src="./css/pages/css/image/burger.svg" alt="" />
+          <img src="./css/image/nav/burger.svg" alt="" />
         </button>
         <ul>
           <li><a href="./index.html">Home</a></li>
@@ -55,7 +55,7 @@
 
       <section>
         <div id="citationContainer">
-          <img src="./css/pages/css/image/quote-1.png" alt="Logo of a quote" />
+          <img src="./css/image/home/quote.png" alt="Logo of a quote" />
           <div>
             <p>
               "Fuerat aestu carentem habentia spectent tonitrua mutastis locavit
@@ -77,7 +77,7 @@
         <div id="events">
           <div class="imageDisplay">
             <img
-              src="./css/pages/css/image/hiking-v1.jpg"
+              src="./css/image/home/hiking1.jpg"
               alt="A man hiking in the mountains"
             />
             <h5>Everest Camp Trek</h5>
@@ -92,7 +92,7 @@
 
           <div class="imageDisplay">
             <img
-              src="./css/pages/css/image/walking-v1.jpg"
+              src="./css/image/home/walking1.jpg"
               alt="A woman walking on the edge of a hill"
             />
             <h5>Walking Holidays</h5>
@@ -143,22 +143,19 @@
             </button>
           </div>
           <div class="imageHome">
+            <img src="./css/image/home/tour1.jpg" alt="Someone skying" />
             <img
-              src="./css/pages/css/image/outdoor-image-01.jpg"
-              alt="Someone skying"
-            />
-            <img
-              src="./css/pages/css/image/image-1.jpg"
+              src="./css/image/home/tour2.jpg"
               alt="A man watching far away next to his bike"
             />
           </div>
           <div class="imageHome">
             <img
-              src="./css/pages/css/image/snow-1.jpg"
+              src="./css/image/home/tour3.jpg"
               alt="Someone walking in ski"
             />
             <img
-              src="./css/pages/css/image/outdoor-image-04.jpg"
+              src="./css/image/home/tour4.jpg"
               alt="A group of people hiking in the mountains in the snow"
             />
           </div>
