--- a/projects.html
+++ b/projects.html
@@ -12,15 +12,25 @@
         <button name="logo" type="button">
           <a href="./index.html">
             <img
-              src="./css/templatePart/image/white-logo-150x42.png"
+              src="./css/image/nav/logoWhite.png"
               alt="Outdoor Adventure Logo"
             />
           </a>
         </button>
         <button class="burger-menu" aria-label="Toggle navigation">
-          <img src="./css/pages/css/image/burger.svg" alt="" />
+          <img src="./css/image/nav/burger.svg" alt="" />
         </button>
         <ul>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./about.html">About</a></li>
+          <li><a href="./services.html">Services</a></li>
+          <li><a href="./projects.html">Projects</a></li>
+          <li><a href="./contact.html">Contact</a></li>
+          <li>
+            <button class="cta"><a href="">TAKE ACTION</a></button>
+          </li>
+        </ul>
+        <ul class="burgerNav">
           <li><a href="./index.html">Home</a></li>
           <li><a href="./about.html">About</a></li>
           <li><a href="./services.html">Services</a></li>
@@ -50,15 +60,15 @@
         </div>
         <article>
           <img
-            src="./css/pages/css/image/water-sports-03.jpg"
+            src="./css/image/projects/water-sports1.jpg"
             alt="A boat cruising in a river next to a cliff"
           />
           <img
-            src="./css/pages/css/image/water-sports-01.jpg"
+            src="./css/image/projects/water-sports2.jpg"
             alt="A small boat in the middle of a lake surrounded by small mountains"
           />
           <img
-            src="./css/pages/css/image/water-sports-04.jpg"
+            src="./css/image/projects/water-sports3.jpg"
             alt="A kanoe with a lady in it relaxing in the middle of a lake"
           />
         </article>
@@ -78,15 +88,15 @@
         </div>
         <article>
           <img
-            src="./css/pages/css/image/winter-sports-01-nzqdakvd9y6ql3cjzkfjdcrr6o5msw2mv8o8ug2dqw.jpg"
+            src="./css/image/projects/winter-sports-01.jpg"
             alt="A man in ski jumping in the snow"
           />
           <img
-            src="./css/pages/css/image/winter-sports-02-nzqdabgzdltvczq7igd9of558tfynx1bhy5e1ogbh4.jpg"
+            src="./css/image/projects/winter-sports-2.jpg"
             alt="Four people in a cable car"
           />
           <img
-            src="./css/pages/css/image/winter-sports-03-nzqd8khsnpfnr49oq759jd19g02dc73axafuw51p20.jpg"
+            src="./css/image/projects/winter-sports-3.jpg"
             alt=" An athlete jumping and doing tricks on a ramp in the snow"
           />
         </article>
@@ -106,15 +116,15 @@
         </div>
         <article>
           <img
-            src="./css/pages/css/image/camp-1-nzqd81p0v0pxax0zrz0q5hs1kan1290o6pe5altkig.jpg"
+            src="./css/image/projects/camp-1.jpg"
             alt="A woman and a black dog sitting in a tent next to a lake"
           />
           <img
-            src="./css/pages/css/image/camp-2-nzqd7cbdqhr6lg1uw61ss66liw44af7x37s1c4v76g.jpg"
+            src="./css/image/projects/camp-2.jpg"
             alt="A man sitting next to his tent on a hill"
           />
           <img
-            src="./css/pages/css/image/camp-3-nzqd6qp3daxl6ex9eepdotmzv12oddu3c8rvarr95k.jpg"
+            src="./css/image/projects/camp-3.jpg"
             alt="An empty tent in the middle of the clouds on top of a mountain"
           />
         </article>
@@ -127,5 +137,6 @@
       </p>
       <p>Copyright © 2025 Outdoor Adventure</p>
     </footer>
+    <script src="./js/burger.js"></script>
   </body>
 </html>
