--- a/services.html
+++ b/services.html
@@ -12,15 +12,25 @@
         <button name="logo" type="button">
           <a href="./index.html">
             <img
-              src="./css/templatePart/image/white-logo-150x42.png"
+              src="./css/image/nav/logoWhite.png"
               alt="Outdoor Adventure Logo"
             />
           </a>
         </button>
         <button class="burger-menu" aria-label="Toggle navigation">
-          <img src="./css/pages/css/image/burger.svg" alt="" />
+          <img src="./css/image/nav/burger.svg" alt="" />
         </button>
         <ul>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./about.html">About</a></li>
+          <li><a href="./services.html">Services</a></li>
+          <li><a href="./projects.html">Projects</a></li>
+          <li><a href="./contact.html">Contact</a></li>
+          <li>
+            <button class="cta"><a href="">TAKE ACTION</a></button>
+          </li>
+        </ul>
+        <ul class="burgerNav">
           <li><a href="./index.html">Home</a></li>
           <li><a href="./about.html">About</a></li>
           <li><a href="./services.html">Services</a></li>
@@ -51,8 +61,8 @@
           <div>
             <div class="imageDisplay">
               <img
-                src="./css/pages/css/image/outdoor-image-03.jpg"
-                alt="A man hiking in the mountains with a backbak"
+                src="./css/image/services/hiking3.jpg"
+                alt="A man hiking in the mountains with a backback"
               />
               <h5>Backpacking Trips</h5>
               <p>
@@ -63,7 +73,7 @@
 
             <div class="imageDisplay">
               <img
-                src="./css/pages/css/image/services-2.jpg"
+                src="./css/image/services/landscape1.jpg"
                 alt="A landscape of moutains in the back and a forest in front"
               />
               <h5>Family Hiking Trips</h5>
@@ -76,7 +86,7 @@
           <div>
             <div class="imageDisplay">
               <img
-                src="./css/pages/css/image/services-3.jpg"
+                src="./css/image/services/landscape2.jpg"
                 alt="A landscape of a lake and small boats with mountains surrounding the lake"
               />
               <h5>Water Sports</h5>
@@ -87,10 +97,7 @@
             </div>
 
             <div class="imageDisplay">
-              <img
-                src="./css/pages/css/image/outdoor-image-01.jpg"
-                alt="Someone skying"
-              />
+              <img src="./css/image/services/ski.jpg" alt="Someone skying" />
               <h5>Winter Sports</h5>
               <p>
                 Fuerat aestu carentem habentia spectent tonitrua mutastis
@@ -158,5 +165,6 @@
       </p>
       <p>Copyright © 2025 Outdoor Adventure</p>
     </footer>
+    <script src="./js/burger.js"></script>
   </body>
 </html>
