Nettoyage du code (id, cohérence des noms etc)

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <!-- Première section contenant la citation -->
 
       <section>
-        <div id="citationContainer">
+        <article id="citationContainer">
           <img src="./css/image/home/quote.png" alt="Logo of a quote" />
           <div>
             <p>
@@ -64,7 +64,7 @@
             <p>- Adam Sendler</p>
           </div>
           <div id="cell"></div>
-        </div>
+        </article>
       </section>
 
       <!--Section contenant les prochains évènements  -->
@@ -74,7 +74,7 @@
 
         <div class="separator"></div>
 
-        <div id="events">
+        <article>
           <div class="imageDisplay">
             <img
               src="./css/image/home/hiking1.jpg"
@@ -104,14 +104,14 @@
               <a href="">LEARN MORE &rarr;</a>
             </button>
           </div>
-        </div>
+        </article>
       </section>
 
       <!-- CTA pour rediriger vers une autre page -->
 
       <section id="exploreTheWorld">
-        <div id="cell2"></div>
-        <div class="textDisplayLeft">
+        <div></div>
+        <article class="textDisplayLeft">
           <h2>Explore The World</h2>
           <div class="separator"></div>
           <p>
@@ -122,14 +122,14 @@
           <button class="cta">
             <a href="">LEARN MORE &rarr;</a>
           </button>
-        </div>
+        </article>
       </section>
 
       <!-- Prochaines destinations -->
 
       <section id="tourSectionFlex">
-        <div id="toursSection">
-          <div id="textDisplayHome">
+        <article>
+          <div>
             <h2>Upcoming Tours & Destination</h2>
             <div class="separator"></div>
             <p>
@@ -159,7 +159,7 @@
               alt="A group of people hiking in the mountains in the snow"
             />
           </div>
-        </div>
+        </article>
       </section>
     </main>
 
