--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
       <!-- Première section texte et image -->
 
       <section>
-        <div class="textDisplayLeft">
+        <article class="textDisplayLeft">
           <h2>Our MissioN</h2>
           <div class="separator"></div>
           <p>
@@ -61,7 +61,7 @@
             consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper
             mattis, pulvinar dapibus leo.
           </p>
-        </div>
+        </article>
 
         <img
           src="./css/image/about/hiking2.jpg"
@@ -72,7 +72,7 @@
       <!-- Deuxième section texte et liste -->
 
       <section>
-        <div class="textDisplayLeft">
+        <article class="textDisplayLeft">
           <h4>Extraordinary Experiences</h4>
           <div class="separator"></div>
           <p>
@@ -84,30 +84,30 @@
             consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper
             mattis, pulvinar dapibus leo.
           </p>
-        </div>
+        </article>
 
-        <div class="textDisplayLeft">
+        <article class="textDisplayLeft">
           <h4>Our Core Values</h4>
           <div class="separator"></div>
           <p>
             Click edit button to change this text. Lorem ipsum dolor sit amet,
             adipiscing elit.
           </p>
-          <div class="liste">
-            <div class="listeLigne">
+          <div class="list">
+            <div class="listLigne">
               <span class="separator2"></span>
               <p>Locavit liberioris possedit</p>
             </div>
-            <div class="listeLigne">
+            <div class="listLigne">
               <span class="separator2"></span>
               <p>Diremit mundi mare undae</p>
             </div>
-            <div class="listeLigne">
+            <div class="listLigne">
               <span class="separator2"></span>
               <p>Spectent tonitrua mutastis</p>
             </div>
           </div>
-        </div>
+        </article>
       </section>
     </main>
     <footer>
