ajout de variables

--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
             />
           </a>
         </button>
-        <button class="burger-menu" aria-label="Toggle navigation">
+        <button class="burgerMenu" aria-label="Toggle navigation">
           <img src="./css/image/nav/burger.svg" alt="" />
         </button>
         <ul>
