correction problèmes page services

--- a/services.html
+++ b/services.html
@@ -110,7 +110,7 @@
 
       <!-- Deuxième section comprenant des textes avec listes -->
 
-      <section id="listes">
+      <section id="list">
         <div class="textDisplayLeft">
           <h4>Why Outdoor Adventure</h4>
           <div class="separator"></div>
@@ -118,16 +118,16 @@
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit
             tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.
           </p>
-          <div class="liste">
-            <div class="listeLigne">
+          <div class="list">
+            <div class="listLigne">
               <span class="separator2"></span>
               <p>Experience: Locavit liberioris possedit</p>
             </div>
-            <div class="listeLigne">
+            <div class="listLigne">
               <span class="separator2"></span>
               <p>Reputation: Diremit mundi mare undae</p>
             </div>
-            <div class="listeLigne">
+            <div class="listLigne">
               <span class="separator2"></span>
               <p>Guide Experience: tonitrua mutastis</p>
             </div>
@@ -141,16 +141,16 @@
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit
             tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.
           </p>
-          <div class="liste">
-            <div class="listeLigne">
+          <div class="list">
+            <div class="listLigne">
               <span class="separator2"></span>
               <p>Private Hike: Locavit liberioris possedit</p>
             </div>
-            <div class="listeLigne">
+            <div class="listLigne">
               <span class="separator2"></span>
               <p>Transportation: Diremit mundi mare undae</p>
             </div>
-            <div class="listeLigne">
+            <div class="listLigne">
               <span class="separator2"></span>
               <p>Great Facilities: Spectent tonitrua mutastis</p>
             </div>
